[package]
name = "ws-write"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.5.6", features = [ "ws" ] }
tokio = { version = "1.19.0", features = [ "fs", "macros", "net", "rt-multi-thread" ] }
tracing = "0.1.34"
tracing-bunyan-formatter = "0.3.2"
tracing-subscriber = "0.3.11"
